--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 
+
+UDAC.xcodeproj/project.xcworkspace/xcuserdata/stephenzhuang.xcuserdatad/UserInterfaceState.xcuserstate
+
+UDAC.xcodeproj/xcuserdata/stephenzhuang.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
