--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 UDAC.xcodeproj/project.xcworkspace/xcuserdata/stephenzhuang.xcuserdatad/UserInterfaceState.xcuserstate
 
 UDAC.xcodeproj/xcuserdata/stephenzhuang.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+
+UDAC.xcodeproj/project.xcworkspace/xcuserdata/pcbeta.xcuserdatad/UserInterfaceState.xcuserstate
+
+UDAC.xcodeproj/xcuserdata/pcbeta.xcuserdatad/xcschemes/UDAC.xcscheme
+
+UDAC.xcodeproj/xcuserdata/pcbeta.xcuserdatad/xcschemes/xcschememanagement.plist
